# cheap_stocks

./: .gitignore  .~lock.cheap_stocks.csv#  Makefile  README.md  cheap_stocks.csv  cheap_stocks_2022-03-17.csv  cheap_stocks_2022-10-20.xlsx  cheap_stocks_2023-06-12.xlsx  pyproject.toml
cheap_stocks/: __main__.py
tests/: test_cheap_stocks.py
