[tool.poetry]
name = "cheap_stocks"
version = "0.1.0"
description = ""
authors = ["Gabriel Silva <gabriel.silva@calindra.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
